Original configs from backup

--- a/syscfg.ini
+++ b/syscfg.ini
@@ -4,11 +4,40 @@ CreateTechnicsCodeDefaultMode=TECHNICS_LASERCUT
 CreateTechnicsCodeDefaultMode_LINE=TECHNICS_UNKOWN
 CreateTechnicsCodeDefaultMode_IMAGE=TECHNICS_UNKOWN
 TechnicsDefaultType=0
-CreateTechnicsCodeDefaultMode_0=TECHNICS_LASERENGRAVE
+CreateTechnicsCodeDefaultMode_0=TECHNICS_LASERCUT
 CreateTechnicsCodeDefaultMode_16711680=TECHNICS_LASERCUT
-CreateTechnicsCodeDefaultMode_65280=TECHNICS_LASERCUT
-CreateTechnicsCodeDefaultMode_12615935=TECHNICS_LASERCUT
-CreateTechnicsCodeDefaultMode_255=TECHNICS_LASERCUT
+CreateTechnicsCodeDefaultMode_65280=TECHNICS_LASERENGRAVE
+CreateTechnicsCodeDefaultMode_12615935=TECHNICS_LASERENGRAVE
+CreateTechnicsCodeDefaultMode_255=TECHNICS_LASERENGRAVE
+CreateTechnicsCodeDefaultMode_16776960=TECHNICS_LASERENGRAVE
+CreateTechnicsCodeDefaultMode_33023=TECHNICS_LASERENGRAVE
+CreateTechnicsCodeDefaultMode_32768=TECHNICS_LASERENGRAVE
+CreateTechnicsCodeDefaultMode_8388736=TECHNICS_LASERCUT
+CreateTechnicsCodeDefaultMode_8388863=TECHNICS_LASERENGRAVE
+CreateTechnicsCodeDefaultMode_7697781=TECHNICS_LASERCUT
+CreateTechnicsCodeDefaultMode_3421236=TECHNICS_LASERCUT
+CreateTechnicsCodeDefaultMode_2565927=TECHNICS_LASERCUT
+CreateTechnicsCodeDefaultMode_65535=TECHNICS_LASERENGRAVE
+CreateTechnicsCodeDefaultMode_5987163=TECHNICS_LASERCUT
+CreateTechnicsCodeDefaultMode_4276545=TECHNICS_LASERCUT
+CreateTechnicsCodeDefaultMode_3499673=TECHNICS_LASERCUT
+CreateTechnicsCodeDefaultMode_4194368=TECHNICS_LASERCUT
+CreateTechnicsCodeDefaultMode_3394764=TECHNICS_LASERCUT
+CreateTechnicsCodeDefaultMode_16751052=TECHNICS_LASERENGRAVE
+CreateTechnicsCodeDefaultMode_12615808=TECHNICS_LASERCUT
+CreateTechnicsCodeDefaultMode_8323072=TECHNICS_LASERENGRAVE
+CreateTechnicsCodeDefaultMode_16636309=TECHNICS_LASERCUT
+CreateTechnicsCodeDefaultMode_12615680=TECHNICS_LASERENGRAVE
+CreateTechnicsCodeDefaultMode_8421376=TECHNICS_LASERCUT
+CreateTechnicsCodeDefaultMode_1048455=TECHNICS_LASERENGRAVE
+CreateTechnicsCodeDefaultMode_10027161=TECHNICS_LASERENGRAVE
+CreateTechnicsCodeDefaultMode_11974326=TECHNICS_LASERENGRAVE
+CreateTechnicsCodeDefaultMode_8421440=TECHNICS_LASERCUT
+CreateTechnicsCodeDefaultMode_9408399=TECHNICS_LASERENGRAVE
+CreateTechnicsCodeDefaultMode_16751001=TECHNICS_LASERENGRAVE
+CreateTechnicsCodeDefaultMode_8421504=TECHNICS_LASERCUT
+CreateTechnicsCodeDefaultMode_8388672=TECHNICS_LASERENGRAVE
+CreateTechnicsCodeDefaultMode_8553090=TECHNICS_LASERCUT
 
 [CreateTechnicsCode_0]
 CreateTechnicsCodeName=TECHNICS_LASERCUT
@@ -24,10 +53,9 @@ CreateTechnicsCodeName=TECHNICS_LASERHITPOINT
 
 [CompanyInfo]
 TelPhone=info@justaddsharks.co.uk
-SoftName=Lasercut5.3 - Blacknose A3 Laser Cutter
-CompanyName=~
-Http=www.justaddsharks.co.uk~
-PrinterName=JAS Whitetooth
+SoftName=Lasercut5.3 - HPC LS6840 
+CompanyName=Swindon Makerspace
+Http=www.swindon-makerspace.org
 
 [ApplicationSetting]
 OutPutWorkFile=1
@@ -56,7 +84,7 @@ NeedSuckPoint=0
 SuckPointTol=0.0
 ShowMinPointSize=0.0
 ShowMaxPointSize=100.0
-CENTERDATA=0
+CENTERDATA=1
 UnitType=0
 SysPointDefaultSize=1.0
 SysDXFReadPointType=0
@@ -214,7 +242,7 @@ OriginDirector=-1
 OriginPosition=0
 GoOriginSpeed=2
 OriginOffsetLen=1.5
-NeedRevise=0
+NeedRevise=1
 StartSpeed=0.5
 WorkAcc=100
 HandFastMoveSpeed = 15
@@ -240,7 +268,7 @@ OneAxisOriginPosition=0.000000
 TwoAxisOriginPosition=600.000000
 OneAxisGoOriginSpeed=15.000000
 TwoAxisGoOriginSpeed=15.000000
-NeedRevise=0
+NeedRevise=1
 StartSpeed=10.000000
 WorkAcc=1200.000000
 SpaceSpeed=300.000000
@@ -264,31 +292,31 @@ SysOutputIOOID_1=-1
 SysOutputIOOID_2=-1
 OneAxisSysOID=0
 TwoAxisSysOID=1
-OneAxisOnePulseMoveLength=0.006350000000000
-TwoAxisOnePulseMoveLength=0.006350000000000
-OneAxisTableLength=650.000000
+OneAxisOnePulseMoveLength=0.007200000000000
+TwoAxisOnePulseMoveLength=0.007200000000000
+OneAxisTableLength=680.000000
 TwoAxisTableLength=400.000000
 OneAxisTableMinPosition=0.000000
-OneAxisTableMaxPosition=650.000000
+OneAxisTableMaxPosition=680.000000
 TwoAxisTableMinPosition=0.000000
 TwoAxisTableMaxPosition=400.000000
 OneAxisOriginDirector=1
 TwoAxisOriginDirector=1
-OneAxisOriginPosition=650.000000
+OneAxisOriginPosition=680.000000
 TwoAxisOriginPosition=400.000000
-OneAxisGoOriginSpeed=80.000000
-TwoAxisGoOriginSpeed=80.000000
+OneAxisGoOriginSpeed=120.000000
+TwoAxisGoOriginSpeed=120.000000
 OneAxisOriginOffsetLen=2
 TwoAxisOriginOffsetLen=2
-NeedRevise=0
-StartSpeed=1.000000
-WorkAcc=200.000000
-SpaceSpeed=200.000000
-ConstantSpeed=10.000000
-HandFastMoveSpeed=200.000000
-HandSlowMoveSpeed=190.000000
+NeedRevise=1
+StartSpeed=5.000000
+WorkAcc=500.000000
+SpaceSpeed=150.000000
+ConstantSpeed=5.000000
+HandFastMoveSpeed=220.000000
+HandSlowMoveSpeed=200.000000
 OneAxisOverLapLength=0.000000
-WorkAcc2=500.000000
+WorkAcc2=700.000000
 SupportTwoXAxis=0
 TwoXAxisOffsetY2=0
 OneAxisOnePulseMoveLength2=0.00484375
@@ -297,8 +325,8 @@ TwoXAxisReduceLen=70
 ParkStartSpeedScale=1.0
 ParkAccScale=1.0
 ParkSpeedScale=1.0
-WorkAccAcc=0.000000
-SpaceAccAcc=0.000000
+WorkAccAcc=15000.000000
+SpaceAccAcc=15000.000000
 XAxisMaxChangeSpeed=20.000000
 YAxisMaxChangeSpeed=20.000000
 SupportTwoLaser=0
@@ -310,22 +338,22 @@ SysOutputIOOID_1=-1
 SysOutputIOOID_2=-1
 SysAxisOID=2
 OnePulseMoveLength=0.001250000000000
-TableLength=400.000000
+TableLength=350.000000
 TableMinPosition=0.000000
-TableMaxPosition=400.000000
+TableMaxPosition=350.000000
 OriginDirector=1
-OriginPosition=400.000000
-GoOriginSpeed=13.000000
-OriginOffsetLen=5.000000
-NeedRevise=0
-WorkAcc=16.000000
+OriginPosition=350.000000
+GoOriginSpeed=10.000000
+OriginOffsetLen=35.000000
+NeedRevise=1
+WorkAcc=50.000000
 HandFastMoveSpeed =12.000000
 HandSlowMoveSpeed =11.000000
-StartSpeed=4.000000
-SpaceSpeed=8.000000
-WorkAccAcc=0.000000
-SpaceAccAcc=0.000000
-AxisMaxChangeSpeed=0.000000
+StartSpeed=2.000000
+SpaceSpeed=10.000000
+WorkAccAcc=20000.000000
+SpaceAccAcc=80000.000000
+AxisMaxChangeSpeed=30.000000
 
 [HandMoveCoordSystem_DEFAULT]
 HandMoveAxis1Increase=-1
@@ -354,11 +382,11 @@ OutputTimes=1
 DelayTime=0
 FeedLength=0.000000
 FeedSpeed=5.000000
-MachineHasWorkMinute=639
+MachineHasWorkMinute=2551
 FeedDelayTime=0
 ChangeSerialNo=0
 OuputLayerOrderType=1
-IsTwoLaserWorking=1
+IsTwoLaserWorking=0
 
 [LaserSimulateSpeedScale]
 SimulateSpeedScaleNumber = 3
@@ -379,20 +407,20 @@ LASER_MODIFYCFG_PASSWORD=0
 [RUNTIMECFG]
 OneCoordSys_ONEAXIS_PULSE=1600
 OneCoordSys_ONEAXIS_LENGTH=2.000000
-TwoCoordSys_ONEAXIS_PULSE=6400
-TwoCoordSys_ONEAXIS_LENGTH=40.640000
-TwoCoordSys_TWOAXIS_PULSE=6400
-TwoCoordSys_TWOAXIS_LENGTH=40.640000
-IMPORTFILE_CENTERDATA=0
-CombineLine_TOL=0.010000
+TwoCoordSys_ONEAXIS_PULSE=5000
+TwoCoordSys_ONEAXIS_LENGTH=36
+TwoCoordSys_TWOAXIS_PULSE=5000
+TwoCoordSys_TWOAXIS_LENGTH=36
+IMPORTFILE_CENTERDATA=1
+CombineLine_TOL=0.100000
 SmoothLine_JB=2
 AdjustStartPt=0
 NeedPartWorkCtrol=0
 StartWorkDelayTime=0
 NeedControlMainAxis=0
 OverWorkDelayTime=0
-TwoCoordSys_TWOAXIS_PULSE2=5000
-TwoCoordSys_TWOAXIS_LENGTH2=24
+TwoCoordSys_TWOAXIS_PULSE2=6400
+TwoCoordSys_TWOAXIS_LENGTH2=50
 
 [ResourceManager]
 CreateDefaultLanguageFile=0
@@ -419,11 +447,11 @@ MaxCurveNumber=1400
 MaxCurveNumber=1400
 
 [Laser]
-AutoSimulateSpeed=8
+AutoSimulateSpeed=0
 
 [DataCheck]
 overlap=1
-selfinter=1
+selfinter=0
 close=1
 intersection=1
 overlaptol=0.01
@@ -435,7 +463,7 @@ CheckLayerCode=-1
 MustCalSecondFile=1
 
 [OFFSETCFG]
-OffsetDist=5.000000
+OffsetDist=8.000000
 OffsetType=0
 OffsetTolerance=0.200000
 MinPointNum=6
@@ -454,7 +482,7 @@ CoordSystemNumber =2
 MainCoordSystemID = 0
 FeedCoordSystemOID=1
 TestMoveLength=50.000000
-TestLaserPower=45.000000
+TestLaserPower=10.000000
 StartCmdDoPause=0
 MachineInputIODelay=3
 ClickLaserTime=0.1
@@ -475,8 +503,8 @@ TestIsSlowSpeed=0
 ClipBoxPower2=40.000000
 RunMustDatum=0
 AlignMachineZPos=0.000000
-LogicOrgPositionX=499.062584
-LogicOrgPositionY=346.875842
+LogicOrgPositionX=447.643371
+LogicOrgPositionY=321.563557
 NeedOutput530=0
 SupportSplitBlockOutPut=0
 ZAxisForLaserFocus=0
@@ -627,8 +655,8 @@ MotionCard_OutputIOOID=-1
 CreateTechnicsCodeName=激光切割
 TechnicsCfgType=0
 LaserCutCoordSysOID=0
-LaserCutConnerPower=50.000000
-LaserCutWorkPower=50.000000
+LaserCutConnerPower=15.000000
+LaserCutWorkPower=15.000000
 LaserCutFrequency=20000
 LaserCutOptimizePathType=1
 LaserCutInnerToOuter=1
@@ -649,7 +677,7 @@ LaserCutTwoAxisBackLashLength=0.000000
 LaserCutBlowGasType=2
 LaserCutAheadBlowGasTimes=0.000000
 LaserCutNoCloseGasTimes=0.000000
-LaserCutSpeed=20.000000
+LaserCutSpeed=65.000000
 LaserCutGWAcc=200.000000
 LaserCutCircleSpeedNum=3
 LaserCutCircleSpeed0_MinR=0.000000
@@ -712,7 +740,7 @@ LaserHitPointStartPosType=0
 CreateTechnicsCodeName=激光雕刻
 TechnicsCfgType=0   
 LaserEngraveCoordSysOID=0
-LaserEngravePower=20.000000
+LaserEngravePower=60.000000
 LaserEngraveFrequency=20000
 LaserEngraveSpeed=200.000000
 LaserEngraveBlowGasType=1
@@ -720,7 +748,7 @@ LaserEngraveFillCircleR=2.500000
 LaserEngraveFillCircleSpace=2.500000
 LaserEngraveFillCircle=0
 LaserEngraveTwoDirector=1
-LaserEngraveScanStepLen=0.080000
+LaserEngraveScanStepLen=0.100000
 LaserEngraveCfgNumber=5
 LaserEngraveMinSpeed_0=0.000000
 LaserEngraveMaxSpeed_0=250.000000
@@ -846,7 +874,7 @@ LaserGradeEngraveCoordSysOID=0
 LaserGradeEngravePower=65.000000
 LaserGradeEngraveStartPower=15.000000
 LaserGradeEngraveFrequency=20000
-LaserGradeEngraveSpeed=300.000000
+LaserGradeEngraveSpeed=100.000000
 LaserGradeEngraveBlowGasType=0
 LaserGradeEngraveTwoDirector=0
 LaserGradeEngraveScanStepLen=0.080000
@@ -913,11 +941,11 @@ StopPosition=3
 ResponseEvent=1
 
 [textdefault]
-FontHeight=12
-FontSpace=5
-text=Just Add Sharks
-FontName=
-IsTrueType=0
+FontHeight=15
+FontSpace=0
+text=Coarse   
+FontName=Berthalia
+IsTrueType=1
 mainShxName=txt
 subShxName=HZTXT
 
@@ -931,6 +959,35 @@ HideNoOutputLayer=0
 ApplyAllLayerAttrib=1
 [FileFormatCfg_map]
 MaxCurveNumber=1500
+[TECHNICS_PENCUT]
+CreateTechnicsCodeName=无名
+TechnicsCfgType=0
+PenCutCoordSysOID=0
+PenCutOptimizePathType=1
+PenCutInnerToOuter=1
+PenCutDownToUpper=0
+PenCutBlockHeight=150.000000
+PenCutAutoSetPathDir=1
+PenCutCicleMinSegNumber=36
+PenCutDisperseLength=0.050000
+PenCutCloseGapLength=0.000000
+PenCutOverlapLength=0.000000
+PenCutAdjustForClose=0
+PenCutQXEnterLength=1.000000
+PenCutDelayDownTime=0.000000
+PenCutDelayUpTime=0.000000
+PenCutOneAxisBackLashLength=0.000000
+PenCutTwoAxisBackLashLength=0.000000
+PenCutSpeed=75.000000
+PenCutGWAcc=3000.000000
+PenCutGWTime=0.010000
+PenCutTrackSize=100
+PenCutOffsetX=0.000000
+PenCutOffsetY=0.000000
+PenCutCtrolMode=0
+PenCutCircleSpeedNum=0
+[TECHNICS_KNIFECUT]
+KnifeCutDownSpeed=20
 
 [TechcisMode]
 SupportMachineEngrave=0
@@ -947,7 +1004,30 @@ NeedSetChangePower=0
 StartPower=0
 ChangePowerPoint=0
 ChangeFrq=0
-[SelectCommand]
-LinkTol=0.02
 [CreateGroupCmd]
 ChangeToFirstLayer=1
+[HALF_BMP]
+DotSize=1
+ScanStep=0.01
+[AutoCalLeadInAndOutTrack]
+AdjustStartPointToConner=0
+MinInflectionAngle=45.000000
+MinInflectionLength=20.000000
+OverLapLength=0.000000
+ReserveBlockType=1
+MinInterDistance=1.000000
+InLeadLineType=0
+InLeadLineLength=2.500000
+InLeadLineAngle=45.000000
+OutLeadLineType=0
+OutLeadLineLength=2.500000
+OutLeadLineAngle=45.000000
+AutoAdjustStartPos=1
+AutoAdjustStartPosToMidLine=1
+KnifeGapOffset=0.000000
+OffsetType=1
+GetDataByLayer=0
+AutoCheckDataRight=0
+AutoCheckIntersect=0
+AutoCheckTimes=2
+MaxLeadLineLen=10.0
